# Velib-MongoDB-Spark-Pipeline

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: 00_check_env.ipynb  01_spark_kpi_ml.ipynb
powerbi/: README.md
src/: velib_ingest.py  velib_spark_local.py
